@@ -1,4 +1,5 @@
 * Tue Mar 06 2012 Shane Bradley <sbradley@redhat.com>- 2.10-0.0
+- Added parser for sos_commands/networking/ip_address.
 - Added date data to the cluster summary so that it would state when sosreport/sysreport was created.
 - Fix bug where fence devies were not found.
 - Fix bug where it was not getting all the mount options for checking GFS mounts.
